--- a/styles.css
+++ b/styles.css
@@ -91,9 +91,32 @@ body { font-family: Poppins, sans-serif; background-color: rgb(248, 249, 250); c
 .chapter-8 .chapter-access-btn:hover { background: rgb(32, 112, 86) !important; }
 
 .palestine {
-  max-width: 20px;
-  max-height: 20px;
-  size: ;
+  max-width: 100%;
+  height: auto;
+  margin-right: 10px;
+  object-fit: contain;
+}
+
+/* Media queries for different screen sizes */
+@media screen and (max-width: 768px) {
+  .palestine {
+      width: 40px;
+      height: auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .palestine {
+      width: 30px;
+      height: auto;
+  }
+} 
+
+/* Hide title on small mobile screens */
+@media screen and (max-width: 500px) {
+  .H title {
+      display: none;
+  }
 }
 
 .image-container {
